# megaboom

./: .bazelrc  .bazelversion  .gitignore  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE.bazel  b  bazel-final.mk  bazel-floorplan.mk  bazel-generate_abstract.mk  bazel-grt.mk  bazel-memory.mk  bazel-print.mk  bazel-route.mk  bazel-synth.mk  bazel-synth_clock_period.mk  bazel-synth_sdc.mk  bazel.mk  config.mk  constraints-boomtile.sdc  constraints-branchpredictor.sdc  constraints-chiptop.sdc  constraints-dcache.sdc  constraints-digitaltop.sdc  constraints-l2.sdc  constraints-sram.sdc  constraints-top.sdc  constraints.sdc  cred_helper.py  cred_helper_template.py  cts-bazel.mk  entrypoint.mk  io-boomtile.tcl  io-sram-bottom.tcl  io-sram.tcl  io-top.tcl  io.tcl  macros.tcl  mock_area.tcl  (+27 more)
.github/scripts/: build_local_target.sh  extract_docker_revision.py
.github/workflows/: ci.yml
docker/: Dockerfile.dev  bazelrc  user-bazelrc
etc/: BuildMegaboom.sh  DockerHelper.sh  DockerTag.sh
jenkins/: genReport.py  public_build.Jenkinsfile
mock/: ChipTop.sv  array_256x128.sv  array_256x64.sv  cc_banks_16384x64.sv  cc_banks_8192x64.sv  cc_dir_1024x16.sv  cc_dir_1024x168.sv  dataArrayB_256x64.sv  data_2048x2.sv  data_2048x8.sv  data_data_40x128.sv  ebtb_128x40.sv  ghist_40x64.sv  ghist_40x72.sv  l2_tlb_ram_0_512x45.sv  l2_tlb_ram_0_512x46.sv  mem_8192x64.sv  regfile_128x64.sv  regfile_128x65.sv
rtl/: ALU.sv  ALUExeUnit.sv  ALUExeUnit_2.sv  ALUExeUnit_3.sv  ALUExeUnit_4.sv  ALUExeUnit_5.sv  ALUUnit.sv  ALUUnit_1.sv  ALUUnit_2.sv  AMOALU.sv  Arbiter.sv  Arbiter_1.sv  Arbiter_10.sv  Arbiter_11.sv  Arbiter_12.sv  Arbiter_13.sv  Arbiter_14.sv  Arbiter_15.sv  Arbiter_16.sv  Arbiter_18.sv  Arbiter_19.sv  Arbiter_2.sv  Arbiter_20.sv  Arbiter_3.sv  Arbiter_4.sv  Arbiter_5.sv  Arbiter_6.sv  Arbiter_7.sv  Arbiter_8.sv  Arbiter_9.sv  AsyncQueue.sv  AsyncQueueSink.sv  AsyncQueueSink_1.sv  AsyncQueueSink_10.sv  AsyncQueueSink_11.sv  AsyncQueueSink_12.sv  AsyncQueueSink_13.sv  AsyncQueueSink_16.sv  AsyncQueueSink_17.sv  AsyncQueueSink_18.sv  (+620 more)
scripts/: mem_dump.py  mem_dump.tcl
snapshots/: kept.bzl  macro_placement.tcl
subpackage/: BUILD  BUILD.bazel
subpackage/rtl/: tag_array_64x184.sv
test/: cred_helper_test.py
