module(
    name = "megaboom",
    version = "0.0.1",
    compatibility_level = 1,
)

# To test with local bazel-orfs, read: https://github.com/The-OpenROAD-Project/bazel-orfs?tab=readme-ov-file#usage
#
# 1. comment git_override() below
# 2. uncomment local_path_override below
#
# local_path_override(
#   module_name = "bazel-orfs", path = "../bazel-orfs"
# )
bazel_dep(name = "bazel-orfs")
git_override(
    module_name = "bazel-orfs",
    commit = "0408d693af0e193fd736f44580fc9a17c2bef8f0",
    remote = "https://github.com/The-OpenROAD-Project/bazel-orfs.git",
)

# TL;DR to test with a locally built ORFS docker image, update below after building
# locally and run `bazel mod tidy`:
#
# $ ./build_openroad.sh
# [lots of output deleted]
# 23 naming to docker.io/openroad/flow-ubuntu22.04-builder:7582cf done
# $ docker buildx imagetools inspect openroad/flow-ubuntu22.04-builder --format "{{json .Manifest.Digest}}"
# "sha256:5d4d20d3d5638fa5c79b05c6f9b240c7e5691bf8b6c47c9a46d9bb0e0d53bb09"
# $ bazel mod tidy

# ORFS is provided as a transitive dependency from bazel-orfs, but
# it is possible to specify a version in here if something newer than
# latest bazel-orfs tested ORFS is needed.

orfs = use_extension("@bazel-orfs//:extension.bzl", "orfs_repositories")
orfs.default(
    image = "docker.io/openroad/orfs:v3.0-3128-gd2e1362e",
    sha256 = "854e1a7b79c5f6d042f7e7999f0e2543647646a5b2cf16be786726f3892aa85a",
)
use_repo(orfs, "com_github_nixos_patchelf_download")
use_repo(orfs, "docker_orfs")
